samples/_failures_safe/1761527574_9f9da7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf734b87.c: In function ‘subtract_matrices’:
./samples/SAFE/__tmp_cf734b87.c:164:25: error: expected ‘)’ at end of input
  164 |         if (result->data
      |            ~            ^
      |                         )
./samples/SAFE/__tmp_cf734b87.c:164:9: error: expected declaration or statement at end of input
  164 |         if (result->data
      |         ^~
./samples/SAFE/__tmp_cf734b87.c:164:9: error: expected declaration or statement at end of input
